--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
   height: 700px;
   border-radius: 10px;
   background-color: rgb(250, 235, 215, 0.4);
-  background-image: url(Group\ 14.png);
+  background-image: url('Group 14.png');
   background-blend-mode: multiply;
 }
 .banner-content {
@@ -227,19 +227,19 @@
 }
 
 .one {
-  background-image: url(Rectangle\ 4.png);
+  background-image: url('Rectangle 4.png');
   background-size: cover;
 }
 .two {
-  background-image: url(Rectangle\ 5.png);
+  background-image: url('Rectangle 5.png');
   background-size: cover;
 }
 .three {
-  background-image: url(Rectangle\ 7.png);
+  background-image: url('Rectangle 7.png');
   background-size: cover;
 }
 .four {
-  background-image: url(Rectangle\ 6.png);
+  background-image: url('Rectangle 6.png');
   background-size: cover;
 }
 .play-card:hover {
