--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@
 .career {
   display: flex;
   margin-top: 120px;
-  background-color: rgba(255, 66, 165, 1);
+  background-color: rgba(255, 66, 165, 0.8);
   background-blend-mode: multiply;
   justify-content: space-between;
 }
@@ -337,16 +337,15 @@
 .skill {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  /* padding-left: 200px; */
-  /* justify-content: center; */
   align-items: center;
-  /* gap: 70px; */
   height: 500px;
   margin-left: 240px;
+  background: rgb(222, 216, 216);
 }
 .common-skill:hover {
   border: 1px solid red;
   border-radius: 40px;
+  color: red;
 }
 .skill-2 {
   margin-left: 100px;
